# audit-struct

./: .gitignore  AUDIT_FINDINGS.md  CLAUDE.md  Cargo.toml  Dockerfile.test  LICENSE-APACHE  README.md  action.yml  project_overview.md
.claude/: ralph-loop.local.md
docs/: 00-executive-summary.md  01-vision-and-problem.md  02-market-analysis.md  03-product-specification.md  04-technical-architecture.md  05-dwarf-technical-deep-dive.md  06-algorithms.md  07-business-model.md  08-implementation-roadmap.md  09-api-specification.md  10-future-roadmap.md  11-task-breakdown.md  30-future-saas-vision.md  README.md  algorithms.md  architecture.md  cli-output.md  dwarf.md  task-breakdown-analysis.md  task-breakdown-comparison.md  task-breakdown-gaps.md  task-breakdown-solo-recommendation.md  task-breakdown-summary.md
docs-private/: 02-market-analysis.md  07-business-model.md
layout-audit/: .gitignore  Cargo.toml  Dockerfile.test  action.yml
project_overview_structured/: business.md  idea.md  phases.md  plan.md  product.md  soon.md  spec.md  tasks.md  tech.md  vision.md
scripts/: test-linux.sh
src/: cli.rs  diff.rs  lib.rs  loader.rs  main.rs  types.rs
struct-audit/: .gitignore  Cargo.toml  Dockerfile.test  README.md  action.yml
struct-audit-plan/: 00-executive-summary.md  01-vision.md  02-market.md  03-tech.md  04-architecture.md  05-algorithms.md  06-business.md  07-roadmap.md  08-spec.md  (+2 more)
struct-audit/.github/workflows/: ci.yml
struct-audit/src/: cli.rs  diff.rs  error.rs  lib.rs  loader.rs  main.rs  types.rs
struct-audit/src/analysis/: padding.rs
struct-audit/src/dwarf/: context.rs  expr.rs  mod.rs  types.rs
struct-audit/src/output/: table.rs
struct-audit/tests/: integration_test.rs
struct-audit/tests/fixtures/: test_cpp_templates.cpp  test_modified.c  test_simple.c
struct-audit/tests/fixtures/rust_test/src/: main.rs
(+39 files in other folders)
