[package]
name = "layout-audit"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Analyze binary memory layouts to detect padding inefficiencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avifenesh/layout-audit"
homepage = "https://github.com/avifenesh/layout-audit"
documentation = "https://docs.rs/layout-audit"
readme = "README.md"
keywords = ["memory", "layout", "padding", "dwarf", "optimization"]
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::profiling"]
authors = ["Avi Fenesh"]
exclude = [
    "tests/",
    "scripts/",
    "Dockerfile.test",
    "action.yml",
    ".github/",
]

[dependencies]
gimli = "0.32"
object = "0.38"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
comfy-table = "7.2"
colored = "3.0"
thiserror = "2.0"
anyhow = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = true
strip = true
