[package]
name = "struct-audit"
version = "0.1.0"
edition = "2024"
description = "Analyze binary memory layouts to detect padding inefficiencies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avifen/struct-audit"
keywords = ["memory", "layout", "padding", "dwarf", "optimization"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
gimli = "0.32"
object = "0.38"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
comfy-table = "7.2"
colored = "3.0"
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = true
strip = true
